--- a/css/custom.css
+++ b/css/custom.css
@@ -404,8 +404,12 @@ div#gallery .row.overflow-scroll .col-md-3:nth-child(2) img {
     }
     
     .agendar.w-100 a {
-        padding: 16px 20px;
+        padding: 15px 12px;
         line-height: inherit;
+        font-size: 22px;
+    }
+    .col-12.col-lg-12.mt-0.h-100.position-absolute.top-0.end-0.bg-cover.foto-banner.aos-init.aos-animate {
+        background-position: 34% 24%;
     }
 
 }
